fixed angular after updates. fixed namespace.

--- a/IMChatApp/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/IMChatApp/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using IMChatApp.Areas.HelpPage.Models
+@using CustomerChat.Areas.HelpPage.Models
 @model HelpPageApiModel
 
 @{
