--- a/IMChatApp/Views/Home/Index.cshtml
+++ b/IMChatApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IMChatApp.Models.Login
+﻿@model CustomerChat.Models.Login
 <div class="jumbotron">
     <h1>SignalR Chat </h1>
     <p class="lead">Login to enter chat</p>
