--- a/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
-@using IMChatApp.Areas.HelpPage
-@using IMChatApp.Areas.HelpPage.Models
+@using CustomerChat.Areas.HelpPage
+@using CustomerChat.Areas.HelpPage.Models
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
