--- a/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,4 +1,4 @@
-@using IMChatApp.Areas.HelpPage.ModelDescriptions
+@using CustomerChat.Areas.HelpPage.ModelDescriptions
 @model CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
