--- a/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,7 @@
 @using System.Web.Http
 @using System.Web.Http.Description
-@using IMChatApp.Areas.HelpPage.Models
-@using IMChatApp.Areas.HelpPage.ModelDescriptions
+@using CustomerChat.Areas.HelpPage.Models
+@using CustomerChat.Areas.HelpPage.ModelDescriptions
 @model HelpPageApiModel
 
 @{
