--- a/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/IMChatApp/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,4 @@
-@using IMChatApp.Areas.HelpPage
+@using CustomerChat.Areas.HelpPage
 @model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
