--- a/IMChatApp/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/IMChatApp/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,5 +1,5 @@
 @using System.Web.Http
-@using IMChatApp.Areas.HelpPage.ModelDescriptions
+@using CustomerChat.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
