--- a/IMChatApp/Views/Home/Index.cshtml
+++ b/IMChatApp/Views/Home/Index.cshtml
@@ -23,12 +23,13 @@
 
     #OnlineUsers {
         z-index: 88;
-        height: auto;
-        width: 181px;
-        bottom: -3%;
+        height: 200px;
+        width: 300px;
+        bottom: 10%;
         position: fixed;
         right: 0%;
         opacity: 1;
+        border-radius: 15px;
     }
 
     .alertBox {
@@ -43,34 +44,48 @@
         font-family: 'Comic Sans MS';
         float: left;
     }
+
+    .panel-primary {
+        border-radius: 15px;
+    }
+
+    .panel-heading {
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+    }
 </style>    
 
 <div class="jumbotron">
     <div id="OnlineUsers">
-        
-        <p class="lead">Let's talk!</p>
-        <div class="login-wrap">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <span class="fa fa-weixin"></span>&nbsp; &nbsp; Let's talk!
+            </div>
+            <div class="panel-body" style="min-height: 100px; max-height: 600px;">
+                <div class="login-wrap">
 
-            @using (Html.BeginForm("Chat", "Home", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true)
-                <div class="form-group">
-                    @Html.LabelFor(m => m.UserNick, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.UserNick, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.UserNick)
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value=" Start chatting &raquo;" class="btn btn-primary btn-large " />
-                    </div>
-                </div>
+                    @using (Html.BeginForm("Chat", "Home", FormMethod.Post, new {@class = "form-horizontal", role = "form"}))
+                    {
+                        @Html.AntiForgeryToken()
+                        @Html.ValidationSummary(true)
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.UserNick, new {@class = "col-md-2 control-label"})
+                            <div class="col-md-10">
+                                @Html.TextBoxFor(m => m.UserNick, new {@class = "form-control"})
+                                @Html.ValidationMessageFor(m => m.UserNick)
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-6 col-md-10">
+                                <input type="submit" value=" Start chatting &raquo;" class="btn btn-primary btn-large "/>
+                            </div>
+                        </div>
 
-            }
+                    }
+                </div>
+            </div>
         </div>
-    </div>
+     </div>
 </div>
 
 
