Changes in back size

--- a/IMChatApp/Views/Home/Index.cshtml
+++ b/IMChatApp/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
         background-position: top center;
         background-repeat: no-repeat;
         background-attachment:scroll;
-        background-size: cover;
-        height: 7000px;        
+        background-size: contain;
+        height: 2000px;       
     }    
  
     .reveal .fa {
