fixed background for layout.

--- a/IMChatApp/Views/Home/Chat.cshtml
+++ b/IMChatApp/Views/Home/Chat.cshtml
@@ -4,10 +4,20 @@
 }
 
 <style>
-    .reveal .fa {
-        font-family: 'FontAwesome';
-        font-style: normal;
-    }
+    body {
+        margin: 0;
+        background-image: url("../content/image/backimage.jpg");
+        background-position: top center;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: cover;
+        height: 2000px;
+    }    
+
+     .reveal .fa {
+         font-family: 'FontAwesome';
+         font-style: normal;
+     }
 
     ul {
         list-style: none;
@@ -61,8 +71,6 @@
 
 <p class="row">
 
-
-    <div class="alert-success " id="userNick" style="padding:8px; text-align:left ; text-wrap:initial; text-indent:each-line">Welcome   <h4 id="userNick">  @ViewBag.Username !!</h4> </div>
     <div ng-app="ChatApp" ng-controller="chatController">
         <div id="OnlineUsers">
             <div class="container">
