--- a/IMChatApp/Views/Home/Index.cshtml
+++ b/IMChatApp/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         background-position: top center;
         background-repeat: no-repeat;
         background-attachment:scroll;
-        background-size: contain;
+        background-size: cover;
         height: 2000px;       
     }    
  
