Hiding users chat panel

--- a/IMChatApp/Views/Home/Chat.cshtml
+++ b/IMChatApp/Views/Home/Chat.cshtml
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="row">
                     <div>
-                        <div class="panel panel-primary">
+                        <div class="panel panel-primary"  ng-show="ShowUsers">
                             <div class="panel-heading">
                                 <span class="fa fa-user-circle-o"></span>&nbsp; &nbsp; Online[{{OnlineUsers.length}}]
                                 <div class="btn-group pull-right">
