--- a/IMChatApp/Views/Home/Chat.cshtml
+++ b/IMChatApp/Views/Home/Chat.cshtml
@@ -35,7 +35,7 @@
     }
 
     #OnlineUsers {
-        z-index: 88;
+        z-index: 0;
         height: 200px;
         width: 300px;
         bottom: -3%;
@@ -76,7 +76,7 @@
             <div class="container">
                 <div class="row">
                     <div>
-                        <div class="panel panel-primary"  ng-show="ShowUsers">
+                        <div class="panel panel-primary"  >
                             <div class="panel-heading">
                                 <span class="fa fa-user-circle-o"></span>&nbsp; &nbsp; Online[{{OnlineUsers.length}}]
                                 <div class="btn-group pull-right">
